# google-cloud-bucket-c

./: CMakeLists.txt  Dockerfile  Dockerfile.debian  README.md  vcpkg.json
.github/workflows/: linux-Windows-macOS.yml
cmake/: CTestConfig.cmake  Config.cmake.in  MultiCPackConfig.cmake  README.txt  Welcome.txt  config.h.in
common/: CMakeLists.txt  gcloud_bucket_c_stdbool.h  gcloud_bucket_c_types_common.c  gcloud_bucket_c_types_common.h  types_common.h
google_cloud_bucket_c/: CMakeLists.txt  bucket.cpp  bucket.h
